# turbo-broccoli

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  database.hpp  main.cpp
src/turbo_broccoli/: database.hpp
src/turbo_broccoli/detail/: storage.hpp  traits.hpp  utils.hpp
src/turbo_broccoli/type/: blob.hpp  blob_storage.hpp  blobimpl.hpp  key.hpp  result_find.hpp  result_key.hpp  tag.hpp  tag_list.hpp  tagged_records.hpp  tagimpl.hpp  tags.hpp  value.hpp
